# TSingBox

./: .gitignore  README.md  pyproject.toml  spec.md
src/tsingbox/: __main__.py  app.py
src/tsingbox/core/: settings.py
src/tsingbox/data/: db.py  models.py  schema.py
src/tsingbox/data/repositories/: nodes.py  preferences.py  routing_rule_sets.py  routing_rules.py  rule_files.py  subscriptions.py  warp_accounts.py
src/tsingbox/services/: config_builder.py  config_models.py  proxy_latency_probe.py  rule_file_service.py  singbox_binary_service.py  singbox_controller.py  singbox_version_manager.py  subscription_manager.py  warp_bootstrap_resolver.py  warp_generator.py
src/tsingbox/services/parsers/: anytls.py  base.py  trojan.py  vless.py  vmess.py
src/tsingbox/ui/screens/: config.py  dashboard.py  logs.py  nodes.py  routing.py  rules.py  settings.py  singbox_versions.py  subscriptions.py  warp.py
src/tsingbox/ui/widgets/: sidebar.py  status_footer.py
tests/: conftest.py  test_app.py  test_smoke.py
tests/data/: test_repositories.py  test_rule_files_repository.py
tests/services/: test_config_builder.py  test_proxy_latency_probe.py  test_rule_file_service.py  test_singbox_binary_service.py  test_singbox_controller.py  test_subscription_manager.py  test_warp_bootstrap_resolver.py  test_warp_generator.py
